5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1650_2728.log
== TEST (2019-04-06 14:46:56) 
-- CODE:
p=float(input("Digite o percurso em quilometros: "))
t=input("Digite carro A ou B: ")
if(t=="A":)
   x=p/8
	print(round(p,2))
else:
	x=p/12
	print(round(p,2))
-- ERROR:
File "XXXX", line 3
    if(t=="A":)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:47:19) 
-- CODE:
p=float(input("Digite o percurso em quilometros: "))
t=input("Digite carro A ou B: ")
if(t=="A"):
   x=p/8
	print(round(p,2))
else:
	x=p/12
	print(round(p,2))
-- ERROR:
File "XXXX", line 5
    print(round(p,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:47:47) 
-- CODE:
p=float(input("Digite o percurso em quilometros: "))
t=input("Digite carro A ou B: ")
if(t=="A"):
   x=p/8
else:
	x=p/12
print(round(p,2))	

	
-- OUTPUT:
65.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:50:48) 
-- CODE:
p=float(input("Digite o percurso em quilometros: "))
t=input("Digite carro A ou B: ")
if(t.upper()=="A"):
   x=p/8
else:
	x=p/12
print(round(x,2))	

	
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 14:51:00) 
-- CODE:
p=float(input("Digite o percurso em quilometros: "))
t=input("Digite carro A ou B: ")
if(t.upper()=="A"):
   x=p/8
else:
	x=p/12
print(round(x,2))	

	
-- EXECUTION TIME:
0.180028
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
